crates/toml_edit/tests/snapshots/invalid/float/double-dot-02.stderr
TOML parse error at line 1, column 20
  |
1 | double-dot-02 = 0.1.2
  |                    ^^
invalid float, expected nothing
